--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 spring.application.name=finalProject
-
 spring.datasource.url=jdbc:postgresql://localhost:5432/mylibrary
 spring.datasource.username=postgres
 spring.datasource.password=postgresql
@@ -7,5 +6,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 logging.level.org.springframework.security=DEBUG
-
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.cache=false
 penalty.per.day=3.00
